--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +10,9 @@
     <com.simplemobiletools.camera.views.AutoFitTextureView
         android:id="@+id/camera_texture_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <ImageView
         android:id="@+id/settings"
@@ -17,7 +20,8 @@
         android:layout_height="@dimen/icon_size"
         android:layout_alignParentRight="true"
         android:padding="@dimen/normal_margin"
-        android:src="@drawable/ic_settings_cog"/>
+        android:src="@drawable/ic_settings_cog"
+        android:visibility="visible" />
 
     <ImageView
         android:id="@+id/toggle_photo_video"
@@ -26,7 +30,8 @@
         android:layout_below="@+id/settings"
         android:layout_alignParentRight="true"
         android:padding="@dimen/normal_margin"
-        android:src="@drawable/ic_video"/>
+        android:src="@drawable/ic_video"
+        android:visibility="visible" />
 
     <ImageView
         android:id="@+id/change_resolution"
@@ -35,7 +40,8 @@
         android:layout_below="@+id/toggle_photo_video"
         android:layout_alignParentRight="true"
         android:padding="@dimen/normal_margin"
-        android:src="@drawable/ic_resolution"/>
+        android:src="@drawable/ic_resolution"
+        android:visibility="visible" />
 
     <ImageView
         android:id="@+id/last_photo_video_preview"
@@ -43,14 +49,72 @@
         android:layout_height="@dimen/icon_size"
         android:layout_below="@+id/change_resolution"
         android:layout_alignParentRight="true"
-        android:padding="@dimen/medium_margin"/>
+        android:padding="@dimen/medium_margin"
+        android:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/capture_delay"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:layout_weight="1"
+        android:padding="@dimen/normal_margin"
+        app:srcCompat="@drawable/ic_clock" />
+
+    <ImageView
+        android:id="@+id/capture_cancel"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_alignEnd="@+id/capture_delay"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="7dp"
+        android:background="@drawable/circle_background"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
+    <LinearLayout
+        android:id="@+id/delay_times"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="56dp"
+        android:gravity="right"
+        android:orientation="vertical"
+        android:visibility="invisible">
+
+        <Button
+            android:id="@+id/btn_5sec"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/delay_times"
+            android:text="5 sec" />
+
+        <Button
+            android:id="@+id/btn_10sec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="10 sec" />
+
+        <Button
+            android:id="@+id/btn_15sec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="15 sec" />
+
+        <Button
+            android:id="@+id/btn_30sec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="30 sec"
+            android:visibility="invisible" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/btn_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center_horizontal|bottom">
+        android:gravity="center_horizontal|bottom"
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/toggle_camera"
@@ -58,14 +122,14 @@
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
             android:padding="@dimen/normal_margin"
-            android:src="@drawable/ic_camera_front"/>
+            android:src="@drawable/ic_camera_front" />
 
         <ImageView
             android:id="@+id/shutter"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
-            android:src="@drawable/ic_shutter"/>
+            android:src="@drawable/ic_shutter" />
 
         <ImageView
             android:id="@+id/toggle_flash"
@@ -73,7 +137,7 @@
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
             android:padding="@dimen/normal_margin"
-            android:src="@drawable/ic_flash_off"/>
+            android:src="@drawable/ic_flash_off" />
 
     </LinearLayout>
 
@@ -85,6 +149,33 @@
         android:layout_centerHorizontal="true"
         android:text="00:00"
         android:textColor="@android:color/white"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/delay_time_selected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="85dp"
+        android:text="30 sec"
+        android:textColor="@color/default_text_color"
+        android:textSize="40dp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/count_down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/circle_shape"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="30"
+        android:textColor="@color/default_text_color"
+        android:textSize="40dp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
