--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp" />
 
     <ImageView
         android:id="@+id/settings"
@@ -69,6 +71,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="7dp"
         android:background="@drawable/circle_background"
+        android:visibility="invisible"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
     <LinearLayout
@@ -155,13 +158,13 @@
         android:id="@+id/delay_time_selected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="85dp"
-        android:text="30 sec"
-        android:textColor="@color/default_text_color"
+        android:layout_marginBottom="120dp"
+        android:text="0"
         android:textSize="40dp"
-        android:visibility="visible" />
+        android:textColor="@android:color/white"
+        android:visibility="invisible" />
+
 
     <TextView
         android:id="@+id/count_down"
@@ -173,7 +176,7 @@
         android:background="@drawable/circle_shape"
         android:gravity="center"
         android:padding="12dp"
-        android:text="30"
+        android:text="0"
         android:textColor="@color/default_text_color"
         android:textSize="40dp"
         android:visibility="invisible" />
