--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -153,12 +153,36 @@
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/settings_grid_line_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_margin"
+            android:background="?attr/selectableItemBackground"
+            android:paddingLeft="@dimen/normal_margin"
+            android:paddingTop="@dimen/activity_margin"
+            android:paddingRight="@dimen/normal_margin"
+            android:paddingBottom="@dimen/activity_margin">
+
+            <com.simplemobiletools.commons.views.MySwitchCompat
+                android:id="@+id/settings_grid_line"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:clickable="false"
+                android:paddingStart="@dimen/medium_margin"
+                android:paddingLeft="@dimen/medium_margin"
+                android:text="@string/grid_line"
+                app:switchPadding="@dimen/medium_margin"/>
+
+        </RelativeLayout>
+
         <View
             android:id="@+id/shutter_divider"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="@color/divider_grey"
-            android:importantForAccessibility="no"/>
+            android:importantForAccessibility="no" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/shutter_label"
