[#49] Added countdown timer to top bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,20 +14,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp" />
-            android:id="@+id/camera_texture_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-           <!-- <ImageView
-        android:id="@+id/last_photo_video_preview"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:layout_below="@+id/change_resolution"
-        android:layout_alignParentRight="true"
-        android:padding="@dimen/medium_margin"/> -->
-        android:contentDescription="TODO" android:padding="@dimen/normal_margin"
-        android:src="@drawable/ic_settings_cog"
-        android:visibility="visible" />
 
     <LinearLayout
             android:id="@+id/btn_bar"
@@ -36,33 +22,63 @@
             android:layout_alignParentTop="true"
             android:gravity="center_horizontal|top"
             android:layout_alignParentEnd="true">
-    <ImageView
-        android:id="@+id/toggle_photo_video"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:layout_below="@+id/settings"
-        android:layout_alignParentRight="true"
-        android:contentDescription="TODO" android:padding="@dimen/normal_margin"
-        android:src="@drawable/ic_video"
-        android:visibility="visible" />
 
-        <ImageView
-                android:id="@+id/change_resolution"
+        <RelativeLayout
+                android:id="@+id/countdown_bar"
                 android:layout_width="@dimen/icon_size"
-                android:layout_height="@dimen/icon_size"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_weight="1"
-                android:layout_alignParentLeft="true"
-                android:padding="@dimen/normal_margin"
-                android:src="@drawable/ic_resolution"/>
-    <ImageView
-        android:id="@+id/change_resolution"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:layout_below="@+id/toggle_photo_video"
-        android:layout_alignParentRight="true"
-        android:contentDescription="TODO" android:padding="@dimen/normal_margin"
-        android:src="@drawable/ic_resolution"
-        android:visibility="visible" />
+                android:layout_alignParentEnd="true">
+            <ImageView
+                    android:id="@+id/countdown_toggle"
+                    android:layout_width="@dimen/icon_size"
+                    android:layout_height="@dimen/icon_size"
+                    android:padding="@dimen/normal_margin"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true" app:srcCompat="@drawable/ic_clock"
+                    android:visibility="visible"/>
+
+            <ImageView
+                    android:id="@+id/countdown_cancel"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignEnd="@+id/countdown_toggle"
+                    android:background="@drawable/circle_background"
+                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
+                    android:visibility="invisible"/>
+
+            <RelativeLayout
+                    android:id="@+id/countdown_times"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/countdown_toggle"
+                    android:visibility="invisible">
+
+                <Button
+                        android:id="@+id/btn_short_timer"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="5 sec"/>
+
+                <Button
+                        android:id="@+id/btn_medium_timer"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/btn_short_timer"
+                        android:text="10 sec"/>
+
+                <Button
+                        android:id="@+id/btn_long_timer"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/btn_medium_timer"
+                        android:text="15 sec"/>
+            </RelativeLayout>
+
+        </RelativeLayout>
 
         <ImageView
                 android:id="@+id/toggle_flash"
@@ -71,14 +87,6 @@
                 android:layout_weight="1"
                 android:padding="@dimen/normal_margin"
                 android:src="@drawable/ic_flash_off"/>
-    <ImageView
-        android:id="@+id/last_photo_video_preview"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:layout_below="@+id/change_resolution"
-        android:layout_alignParentRight="true"
-        android:contentDescription="TODO" android:padding="@dimen/medium_margin"
-        android:visibility="visible" />
 
         <ImageView
                 android:id="@+id/settings"
@@ -88,64 +96,6 @@
                 android:layout_weight="1"
                 android:padding="@dimen/normal_margin"
                 android:src="@drawable/ic_settings_cog"/>
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/countdown_toggle"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:layout_weight="1"
-        android:contentDescription="TODO" android:padding="@dimen/normal_margin"
-        app:srcCompat="@drawable/ic_clock"
-        android:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/countdown_cancel"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_alignEnd="@+id/countdown_toggle"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/circle_background"
-        android:contentDescription="TODO" android:visibility="invisible"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
-
-    <LinearLayout
-        android:id="@+id/countdown_times"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="56dp"
-        android:gravity="right"
-        android:orientation="vertical"
-        android:visibility="invisible">
-
-        <Button
-            android:id="@+id/btn_short_timer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/countdown_times"
-            android:text="5 sec" />
-
-        <Button
-            android:id="@+id/btn_medium_timer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="10 sec" />
-
-        <Button
-            android:id="@+id/btn_long_timer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="15 sec" />
-
-        <Button
-            android:id="@+id/btn_30sec"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="30 sec"
-            android:visibility="invisible" />
     </LinearLayout>
 
     <LinearLayout
@@ -170,11 +120,6 @@
                 android:layout_height="@dimen/icon_size"
                 android:layout_weight="1"
                 android:src="@drawable/ic_shutter"/>
-            android:id="@+id/shutter"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:layout_weight="1"
-            android:contentDescription="TODO" android:src="@drawable/ic_shutter" />
 
         <ImageView
                 android:id="@+id/toggle_photo_video"
@@ -183,13 +128,6 @@
                 android:layout_weight="1"
                 android:padding="@dimen/normal_margin"
                 android:src="@drawable/ic_video"/>
-            android:id="@+id/toggle_flash"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:layout_weight="1"
-            android:contentDescription="TODO" android:padding="@dimen/normal_margin"
-            android:src="@drawable/ic_flash_off" />
-
     </LinearLayout>
 
     <TextView
