--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -168,4 +168,18 @@
         android:textSize="40dp"
         android:visibility="invisible" />
 
+    <ImageView
+        android:id="@+id/last_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:rotation="270"
+        app:srcCompat="@android:drawable/arrow_up_float" />
+
 </RelativeLayout>
