Connect frontend with backend [#65]

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,7 +125,8 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
-            android:contentDescription="TODO" android:padding="@dimen/normal_margin"
+            android:contentDescription="TODO"
+            android:padding="@dimen/normal_margin"
             android:src="@drawable/ic_camera_front" />
 
         <ImageView
@@ -133,23 +134,26 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
-            android:contentDescription="TODO" android:src="@drawable/ic_shutter"
-            android:visibility="invisible"/>
+            android:contentDescription="TODO"
+            android:src="@drawable/ic_shutter"
+            android:visibility="visible"/>
 
         <ImageView
             android:id="@+id/burst"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
-            android:contentDescription="TODO" android:src="@drawable/ic_burst"
-            android:visibility="visible"/>
+            android:contentDescription="TODO"
+            android:src="@drawable/ic_burst"
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/toggle_flash"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
-            android:contentDescription="TODO" android:padding="@dimen/normal_margin"
+            android:contentDescription="TODO"
+            android:padding="@dimen/normal_margin"
             android:src="@drawable/ic_flash_off" />
 
     </LinearLayout>
