--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,35 +17,46 @@
         android:layout_marginTop="0dp" />
 
     <View
+        android:id="@+id/line1"
         android:layout_width="1dp"
-        android:layout_height="675dp"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="56dp"
         android:layout_marginLeft="135dp"
-        android:background="@color/md_grey_600" />
-
-    <View
-        android:layout_width="1dp"
-        android:layout_height="675dp"
         android:background="@color/md_grey_600"
-        android:layout_marginLeft="280dp" />
+        android:visibility="visible" />
 
     <View
+        android:id="@+id/line2"
+        android:layout_width="1dp"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="56dp"
+        android:layout_marginLeft="280dp"
+        android:background="@color/md_grey_600"
+        android:visibility="visible" />
+
+    <View
+        android:id="@+id/line3"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_marginTop="230dp"
-        android:background="@color/md_grey_600" />
+        android:background="@color/md_grey_600"
+        android:visibility="visible" />
 
     <View
+        android:id="@+id/line4"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_marginTop="460dp"
-        android:background="@color/md_grey_600" />
+        android:background="@color/md_grey_600"
+        android:visibility="visible" />
 
     <ImageView
         android:id="@+id/settings"
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size"
         android:layout_alignParentRight="true"
-        android:contentDescription="TODO" android:padding="@dimen/normal_margin"
+        android:contentDescription="TODO"
+        android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_settings_cog"
         android:visibility="visible" />
 
@@ -55,7 +66,8 @@
         android:layout_height="@dimen/icon_size"
         android:layout_below="@+id/settings"
         android:layout_alignParentRight="true"
-        android:contentDescription="TODO" android:padding="@dimen/normal_margin"
+        android:contentDescription="TODO"
+        android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_video"
         android:visibility="visible" />
 
@@ -65,7 +77,8 @@
         android:layout_height="@dimen/icon_size"
         android:layout_below="@+id/toggle_photo_video"
         android:layout_alignParentRight="true"
-        android:contentDescription="TODO" android:padding="@dimen/normal_margin"
+        android:contentDescription="TODO"
+        android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_resolution"
         android:visibility="visible" />
 
@@ -75,7 +88,8 @@
         android:layout_height="@dimen/icon_size"
         android:layout_below="@+id/change_resolution"
         android:layout_alignParentRight="true"
-        android:contentDescription="TODO" android:padding="@dimen/medium_margin"
+        android:contentDescription="TODO"
+        android:padding="@dimen/medium_margin"
         android:visibility="visible" />
 
     <ImageView
@@ -83,9 +97,10 @@
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size"
         android:layout_weight="1"
-        android:contentDescription="TODO" android:padding="@dimen/normal_margin"
-        app:srcCompat="@drawable/ic_clock"
-        android:visibility="visible" />
+        android:contentDescription="TODO"
+        android:padding="@dimen/normal_margin"
+        android:visibility="visible"
+        app:srcCompat="@drawable/ic_clock" />
 
     <ImageView
         android:id="@+id/countdown_cancel"
@@ -96,7 +111,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/circle_background"
-        android:contentDescription="TODO" android:visibility="invisible"
+        android:contentDescription="TODO"
+        android:visibility="invisible"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
     <LinearLayout
@@ -149,7 +165,8 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
-            android:contentDescription="TODO" android:padding="@dimen/normal_margin"
+            android:contentDescription="TODO"
+            android:padding="@dimen/normal_margin"
             android:src="@drawable/ic_camera_front" />
 
         <ImageView
@@ -157,14 +174,16 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
-            android:contentDescription="TODO" android:src="@drawable/ic_shutter" />
+            android:contentDescription="TODO"
+            android:src="@drawable/ic_shutter" />
 
         <ImageView
             android:id="@+id/toggle_flash"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_weight="1"
-            android:contentDescription="TODO" android:padding="@dimen/normal_margin"
+            android:contentDescription="TODO"
+            android:padding="@dimen/normal_margin"
             android:src="@drawable/ic_flash_off" />
 
     </LinearLayout>
