--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,35 +16,65 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp" />
 
-    <View
-        android:id="@+id/line1"
-        android:layout_width="0.1dp"
-        android:layout_height="fill_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="56dp"
-        android:layout_marginLeft="135dp"
-        android:background="@color/md_grey_600" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_holder">
 
-    <View
-        android:id="@+id/line2"
-        android:layout_width="0.1dp"
-        android:layout_height="fill_parent"
-        android:layout_marginBottom="56dp"
-        android:layout_marginLeft="280dp"
-        android:background="@color/md_grey_600" />
+        <View
+            android:id="@+id/line1"
+            android:layout_width="0.4dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="140dp"
+            android:background="@color/md_grey_600"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <View
-        android:id="@+id/line3"
-        android:layout_width="fill_parent"
-        android:layout_height="0.1dp"
-        android:layout_marginTop="230dp"
-        android:background="@color/md_grey_600" />
+        <View
+            android:id="@+id/line2"
+            android:layout_width="0.4dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="140dp"
+            android:background="@color/md_grey_600"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <View
-        android:id="@+id/line4"
-        android:layout_width="fill_parent"
-        android:layout_height="0.1dp"
-        android:layout_marginTop="460dp"
-        android:background="@color/md_grey_600" />
+        <View
+            android:id="@+id/line3"
+            android:layout_width="wrap_content"
+            android:layout_height="0.4dp"
+            android:layout_marginTop="225dp"
+            android:background="@color/md_grey_600"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <View
+            android:id="@+id/line4"
+            android:layout_width="wrap_content"
+            android:layout_height="0.4dp"
+            android:layout_marginBottom="225dp"
+            android:background="@color/md_grey_600"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/settings"
