handleGridLine() method now calls the entire ConstraintLayout and not each View #68

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_marginTop="0dp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/gridline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="56dp"
